--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
     <div id="app"></div>
     <div>We can add any html or build it with JS</div>
+
+    <script src="scripts/app.js"></script>
 </body>
 </html>
